--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" id ="player1" placeholder="name">
-    <button class="zero">0</button>
-    <button class="cross">x</button>
-    <input type="text" id ="player2" placeholder="name">
-    <button class="cross">x</button>
-    <button class="zero">0</button>
+    <form action="#" method="#" id="formOne">
+        <input type="text" id ="playerOne" placeholder="name">
+        <button class="zero">0</button>
+        <button class="cross">x</button>
+        <button type="submit">Player1</button>
+    </form>
+
+    <form action="#" method="#" id="formTwo">
+        <input type="text" id ="playerTwo" placeholder="name">
+        <!-- <button class="zero">0</button>
+        <button class="cross">x</button> -->
+        <button type="submit">Player2</button>
+    </form>
+
     <script src="app.js"></script>
 </body>
 </html>
