factory function is work

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
     <form action="#" method="#" id="formOne">
-        <input type="text" id ="playerOne" placeholder="name">
-        <button class="zero">0</button>
-        <button class="cross">x</button>
+        <label for="name1">Name</label>
+        <input type="text" id="name1" name="name">
         <button type="submit">Player1</button>
     </form>
 
     <form action="#" method="#" id="formTwo">
-        <input type="text" id ="playerTwo" placeholder="name">
-        <!-- <button class="zero">0</button>
-        <button class="cross">x</button> -->
+        <label for="name2">Name</label>
+        <input type="text" id="name2" name="name">
         <button type="submit">Player2</button>
     </form>
 
