improve factory function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="per1"></div>
+    <div id="per2"></div>
     <form action="#" method="#" id="formOne">
         <label for="name1">Name</label>
         <input type="text" id="name1" name="name">
