--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="menu">
 
-            <form action="#" method="#" id="formOne">
+            <form action="#" method="#" id="form">
 
                 <div>
                     <label for="userOne">Name</label>
