--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
                 <div>
                     <label for="userOne">Name</label>
-                    <input type="text" id="userOne" name="name">
+                    <input type="text" id="userOne" name="name" autocomplete="off">
                 </div>
 
                 <div>
                     <label for="userTwo">Name</label>
-                    <input type="text" id="userTwo" name="name">
+                    <input type="text" id="userTwo" name="name" autocomplete="off">
                 </div>
 
                 <button type="submit">Create Users</button>
@@ -37,7 +37,7 @@
             <div class="info">
 
                 <div>
-                    <div id="userNameOne"></div>
+                    <div id="userNameOne" class="activePlayer"></div>
                     <div id="pointOne"></div>
                 </div>
     
