create grid's elements

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="gameBoard">
                 <div class="gridBoard">
-                    <div class="item" id="0"></div>
+                    <!-- <div class="item" id="0"></div>
                     <div class="item" id="1"></div>
                     <div class="item" id="2"></div>
                     <div class="item" id="3"></div>
@@ -58,7 +58,7 @@
                     <div class="item" id="5"></div>
                     <div class="item" id="6"></div>
                     <div class="item" id="7"></div>
-                    <div class="item" id="8"></div>
+                    <div class="item" id="8"></div> -->
                 </div>
             </div>
 
