--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
             </div>
 
             <div class="gameBoard">
-                <div class="gridBoard">
-                    <!-- <div class="item" id="0"></div>
-                    <div class="item" id="1"></div>
-                    <div class="item" id="2"></div>
-                    <div class="item" id="3"></div>
-                    <div class="item" id="4"></div>
-                    <div class="item" id="5"></div>
-                    <div class="item" id="6"></div>
-                    <div class="item" id="7"></div>
-                    <div class="item" id="8"></div> -->
-                </div>
+                <div class="gridBoard"></div>
             </div>
 
         </div>
