begining to create a function for style winner

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <button type="submit">Create Users</button>
             </form>
 
+            <button class="reset">Play again</button>
+
         </div>
         
         <div class="board">
