--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <form action="#" method="#" id="form">
 
                 <div>
-                    <label for="userOne">Name</label>
+                    <label for="userOne">Player One</label>
                     <input type="text" id="userOne" name="name" autocomplete="off">
                 </div>
 
                 <div>
-                    <label for="userTwo">Name</label>
+                    <label for="userTwo">Player Two</label>
                     <input type="text" id="userTwo" name="name" autocomplete="off">
                 </div>
 
